--- a/src/main/resources/templates/a404.html
+++ b/src/main/resources/templates/a404.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=1440, maximum-scale=1.0" />
     <meta property="og:title" content="동아리 NALSSAM 지원하기">
     <meta property="og:description" content="2021년도 동아리 NALSSAM 노예 되기">
-    <meta property="og:image" content="./img/bio-3-C9239852-EAE4-440A-938E-E71B77F4B98B.png">
-    <link rel="shortcut icon" type="image/png" href="./img/logod.png" />
-    <meta name="og:type" content="website" />
+    <meta property="og:image" content="./img/cover.png">
     <meta property="og:url" content="https://www.nalssam.com" />
+    <link rel="shortcut icon" type="image/png" href="./img/LOGO.png" />
+    <meta name="og:type" content="website" />
     <link rel="stylesheet" type="text/css" href="css/a404.css" />
-    <title>NALSSAM</title>
+    <title>404</title>
     <style>
       @font-face {
         font-family: "SFCompact-Regular";
