--- a/src/main/resources/templates/hw.html
+++ b/src/main/resources/templates/hw.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=1440, maximum-scale=1.0" />
     <meta property="og:title" content="동아리 NALSSAM 지원하기">
     <meta property="og:description" content="2021년도 동아리 NALSSAM 노예 되기">
-    <meta property="og:image" content="./img/bio-3-C9239852-EAE4-440A-938E-E71B77F4B98B.png">
-    <link rel="shortcut icon" type="image/png" href="./img/logod.png" />
+    <meta property="og:image" content="./img/cover.png">
     <meta property="og:url" content="https://www.nalssam.com" />
+    <link rel="shortcut icon" type="image/png" href="./img/LOGO.png" />
     <meta name="og:type" content="website" />
     <link rel="stylesheet" type="text/css" href="css/hw.css" />
     <title>NALSSAM</title>
@@ -241,12 +241,6 @@
         <div class="view-C61RwL">
           <div class="navbar-UOcbxe">
             <div class="hr-dIx87p"></div>
-            <a
-              href="https://docs.google.com/forms/d/e/1FAIpQLSeN4yuI6fxrqY3A1CYe7Y0yIaWwMlv7qVp9dXZnjb4Y6zYgxg/viewform?usp=sf_link"
-              target="_blank"
-            >
-              <div class="button-dIx87p"><div class="textlabel-63crYe ji1style">지원하기</div></div></a
-            >
           </div>
           <a href="index.html"><div class="nalssam-UOcbxe nalssamlogo">NALSSAM</div></a>
         </div>
@@ -272,10 +266,10 @@
         </div>
         <div class="group-2-C61RwL">
           <div class="textlabel-zUixHA thebig">본인에게 맞는 세부 역량을 찾아보세요.</div>
-          <img class="line-5-zUixHA" src="img/hw-line-5-163EB952-B348-4685-B876-2175AD5EFA36.png" />
-          <img class="line-5-sdxwGy" src="img/hw-line-5-163EB952-B348-4685-B876-2175AD5EFA36.png" />
-          <img class="line-5-kTiyrb" src="img/hw-line-5-163EB952-B348-4685-B876-2175AD5EFA36.png" />
-          <img class="line-5-GE0XEQ" src="img/hw-line-5-163EB952-B348-4685-B876-2175AD5EFA36.png" />
+          <img class="line-5-zUixHA" src="img/bm-line-5-CD4A7D9A-ADF8-4149-8F83-6F1E7E360A48.png" />
+          <img class="line-5-sdxwGy" src="img/bm-line-5-CD4A7D9A-ADF8-4149-8F83-6F1E7E360A48.png" />
+          <img class="line-5-kTiyrb" src="img/bm-line-5-CD4A7D9A-ADF8-4149-8F83-6F1E7E360A48.png" />
+          <img class="line-5-GE0XEQ" src="img/bm-line-5-CD4A7D9A-ADF8-4149-8F83-6F1E7E360A48.png" />
           <div class="textlabel-sdxwGy sd36">피지컬 컴퓨팅</div>
           <div class="hw-zUixHA sdmedium24">
             날샘 HW 팀에서는 아두이노와 라즈베리 파이를 이용한 수많은 프로젝트를 진행하며 다양한 센서와 <br />출력을
@@ -336,33 +330,40 @@
             </div>
           </div>
         </div>
-        <div class="group-6-C61RwL">
-          <div class="stacked-group-PIEh7b">
-            <a href="sw.html"> <div class="sw-logo-6NpaO9"></div></a>
-            <img class="line-2-6NpaO9" src="img/index-line-3-0ACD2E49-327D-4AE9-9D76-C17263651F94@2x.png" />
-            <a href="bm.html"
-              ><img
-                class="x00002-6NpaO9"
-                src="img/bm-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900002-088264A5-6D42-44BE-9400-2521E0C0E192@2x.png"
-            /></a>
-            <img class="line-3-6NpaO9" src="img/index-line-3-0ACD2E49-327D-4AE9-9D76-C17263651F94@2x.png" />
-            <a href="hw.html"
-              ><img
-                class="x00001-6NpaO9"
-                src="img/hw-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900001-6BF45C9F-7F8D-4D98-BBE0-8224395F2912@2x.png"
-            /></a>
-            <img class="line-3-D4WyEx" src="img/index-line-3-0ACD2E49-327D-4AE9-9D76-C17263651F94@2x.png" />
-            <a href="bio.html"> <div class="g-slave-6NpaO9"></div></a>
-            <img class="line-3-VX9NFJ" src="img/index-line-3-0ACD2E49-327D-4AE9-9D76-C17263651F94@2x.png" />
-            <a href="a404.html"> <div class="cr-6NpaO9"></div></a>
-            <img class="line-3-e8LPZY" src="img/index-line-3-0ACD2E49-327D-4AE9-9D76-C17263651F94@2x.png" />
-            <a href="a404.html">
-              <div class="more00000-6NpaO9">
-                <a href="a404.html" onclick="window.event.stopPropagation()"
-                  ><img class="more00000-V9ZBCi" src="img/bio-more00000-775F189C-BA27-4692-8E0E-0CF1597B1523@2x.png"
-                /></a></div
-            ></a>
+        <div class="group-11-C61RwL">
+          <div class="group-6-bAyQtV">
+            <div class="stacked-group-W8YgeY">
+              <a href="sw.html"> <div class="sw-logo-xd0wTK"></div></a>
+              <img class="line-2-xd0wTK" src="img/bm-line-3-0CB98E8B-7DD7-4CA7-A98E-654C9096F029@2x.png" />
+              <a href="bm.html"
+                ><img
+                  class="x00002-xd0wTK"
+                  src="img/sw-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900002-C8BAD57E-9D4B-4694-AE23-AA289E64697F@2x.png"
+              /></a>
+              <img class="line-3-xd0wTK" src="img/bm-line-3-0CB98E8B-7DD7-4CA7-A98E-654C9096F029@2x.png" />
+              <a href="hw.html"
+                ><img
+                  class="x00001-xd0wTK"
+                  src="img/bm-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900001-DC64220C-B753-410C-9435-79B8A2BC751F@2x.png"
+              /></a>
+              <img class="line-3-Hxo22Q" src="img/bm-line-3-0CB98E8B-7DD7-4CA7-A98E-654C9096F029@2x.png" />
+              <a href="bio.html"> <div class="g-slave-xd0wTK"></div></a>
+              <img class="line-3-HrtGqK" src="img/bm-line-3-0CB98E8B-7DD7-4CA7-A98E-654C9096F029@2x.png" />
+              <a href="a404.html"> <div class="cr-xd0wTK"></div></a>
+              <img class="line-3-xLcPb5" src="img/bm-line-3-0CB98E8B-7DD7-4CA7-A98E-654C9096F029@2x.png" />
+              <a href="a404.html">
+                <div class="more00000-xd0wTK">
+                  <a href="a404.html" onclick="window.event.stopPropagation()"
+                    ><img class="more00000-TVJ55C" src="img/bio-more00000-904D57A4-C295-49A9-8391-80D5A2DC7E2A@2x.png"
+                  /></a></div
+              ></a>
+            </div>
           </div>
+          <div class="click-bAyQtV moreim more">Click!</div>
+          <div class="click-zLZUBK moreim more">Click!</div>
+          <div class="click-3qshht moreim more">Click!</div>
+          <div class="click-hdKSmR moreim more">Click!</div>
+          <div class="click-waRZGu moreim more">Click!</div>
         </div>
       </div>
     </div>
