--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=1440, maximum-scale=1.0" />
     <meta property="og:title" content="동아리 NALSSAM 지원하기">
     <meta property="og:description" content="2021년도 동아리 NALSSAM 노예 되기">
-    <meta property="og:image" content="./img/bio-3-C9239852-EAE4-440A-938E-E71B77F4B98B.png">
+    <meta property="og:image" content="./img/cover.png">
     <meta property="og:url" content="https://www.nalssam.com" />
-    <link rel="shortcut icon" type="image/png" href="./img/logod.png" />
+    <link rel="shortcut icon" type="image/png" href="./img/LOGO.png" />
     <meta name="og:type" content="website" />
     <link rel="stylesheet" type="text/css" href="css/index.css" />
     <title>NALSSAM</title>
@@ -235,52 +235,71 @@
     <meta name="author" content="AnimaApp.com - Design to code, Automated." />
   </head>
   <body style="margin: 0; background: rgba(255, 255, 255, 1)">
+    <script>
+      window.kakaoAsyncInit = function() {
+        Kakao.Channel.createAddChannelButton({
+          container: '#kakao-talk-channel-add-button',
+        });
+      };
+    
+      (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = 'https://developers.kakao.com/sdk/js/kakao.channel.min.js';
+        fjs.parentNode.insertBefore(js, fjs);
+      })(document, 'script', 'kakao-js-sdk');
+    </script>
     <input type="hidden" id="anPageName" name="page" value="index" />
     <div class="container-center-horizontal">
       <div class="index screen">
         <div class="view-C61RwL">
           <div class="navbar-UOcbxe">
             <div class="hr-dIx87p"></div>
-            <a
-              href="https://docs.google.com/forms/d/e/1FAIpQLSeN4yuI6fxrqY3A1CYe7Y0yIaWwMlv7qVp9dXZnjb4Y6zYgxg/viewform"
-              target="_blank"
-            >
-              <div class="button-dIx87p">
-                <div class="fill-63crYe"></div>
-                <div class="textlabel-63crYe ji1style">지원하기</div>
-              </div></a
-            >
           </div>
           <a href="index.html"><div class="nalssam-UOcbxe nalssamlogo">NALSSAM</div></a>
         </div>
         <div class="rectangle-C61RwL"></div>
-        <div class="group-6-C61RwL">
-          <div class="stacked-group-PIEh7b">
-            <a href="sw.html"> <div class="sw-logo-6NpaO9"></div></a>
-            <img class="line-2-6NpaO9" src="img/index-line-3-0ACD2E49-327D-4AE9-9D76-C17263651F94@2x.png" />
-            <a href="bm.html"
-              ><img
-                class="x00002-6NpaO9"
-                src="img/bm-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900002-088264A5-6D42-44BE-9400-2521E0C0E192@2x.png"
-            /></a>
-            <img class="line-3-6NpaO9" src="img/index-line-3-0ACD2E49-327D-4AE9-9D76-C17263651F94@2x.png" />
-            <a href="hw.html"
-              ><img
-                class="x00001-6NpaO9"
-                src="img/hw-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900001-6BF45C9F-7F8D-4D98-BBE0-8224395F2912@2x.png"
-            /></a>
-            <img class="line-3-D4WyEx" src="img/index-line-3-0ACD2E49-327D-4AE9-9D76-C17263651F94@2x.png" />
-            <a href="bio.html"> <div class="g-slave-6NpaO9"></div></a>
-            <img class="line-3-VX9NFJ" src="img/index-line-3-0ACD2E49-327D-4AE9-9D76-C17263651F94@2x.png" />
-            <a href="a404.html"> <div class="cr-6NpaO9"></div></a>
-            <img class="line-3-e8LPZY" src="img/index-line-3-0ACD2E49-327D-4AE9-9D76-C17263651F94@2x.png" />
-            <a href="a404.html">
-              <div class="more00000-6NpaO9">
-                <a href="a404.html" onclick="window.event.stopPropagation()"
-                  ><img class="more00000-V9ZBCi" src="img/bio-more00000-775F189C-BA27-4692-8E0E-0CF1597B1523@2x.png"
-                /></a></div
-            ></a>
+        <a href="https://jcw87.github.io/c2-sans-fight/" target="_blank"
+          ><img class="bitmap-C61RwL" src="img/index-bitmap-0B047FAB-0AC5-4F3A-A788-222133204DFD@2x.png"
+        /></a>
+        <div class="group-11-C61RwL">
+          <div class="group-6-bAyQtV">
+            <div class="stacked-group-W8YgeY">
+              <a href="sw.html"> <div class="sw-logo-xd0wTK"></div></a>
+              <img class="line-2-xd0wTK" src="img/bm-line-3-0CB98E8B-7DD7-4CA7-A98E-654C9096F029@2x.png" />
+              <a href="bm.html"
+                ><img
+                  class="x00002-xd0wTK"
+                  src="img/sw-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900002-C8BAD57E-9D4B-4694-AE23-AA289E64697F@2x.png"
+              /></a>
+              <img class="line-3-xd0wTK" src="img/bm-line-3-0CB98E8B-7DD7-4CA7-A98E-654C9096F029@2x.png" />
+              <a href="hw.html"
+                ><img
+                  class="x00001-xd0wTK"
+                  src="img/bm-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900001-DC64220C-B753-410C-9435-79B8A2BC751F@2x.png"
+              /></a>
+              <img class="line-3-Hxo22Q" src="img/bm-line-3-0CB98E8B-7DD7-4CA7-A98E-654C9096F029@2x.png" />
+              <a href="bio.html"> <div class="g-slave-xd0wTK"></div></a>
+              <img class="line-3-HrtGqK" src="img/bm-line-3-0CB98E8B-7DD7-4CA7-A98E-654C9096F029@2x.png" />
+              <a href="a404.html"> <div class="cr-xd0wTK"></div></a>
+              <img class="line-3-xLcPb5" src="img/bm-line-3-0CB98E8B-7DD7-4CA7-A98E-654C9096F029@2x.png" />
+              <a href="a404.html">
+                <div class="more00000-xd0wTK">
+                  <div
+                  id="kakao-talk-channel-add-button"
+                  data-channel-public-id="_SxnLNK"
+                  data-size="large"
+                  data-support-multiple-densities="true"
+                  ></div></a></div
+              ></a>
+            </div>
           </div>
+          <div class="click-bAyQtV moreim more">Click!</div>
+          <div class="click-zLZUBK moreim more">Click!</div>
+          <div class="click-3qshht moreim more">Click!</div>
+          <div class="click-hdKSmR moreim more">Click!</div>
+          <div class="click-waRZGu moreim more">Click!</div>
         </div>
         <div class="nalssam-C61RwL nalssamlogoblack">NALSSAM</div>
         <div class="x-C61RwL thebig">동아리 날샘 신입생 모집.</div>
@@ -299,7 +318,6 @@
         </div>
         <div class="group-9-C61RwL">
           <div class="rectangle-9dtg3L"></div>
-          <div class="x2020-9dtg3L nalssamlogoblack">2020년도 최우수 동아리 날샘</div>
         </div>
         <div class="rectangle-mzXdH9">
           <iframe
@@ -319,19 +337,16 @@
         </div>
         <div class="group-3-C61RwL">
           <div class="google-ads-hvAGCq google-ads--style">Google Ads<br />넣읍시다.</div>
-          <div class="rectangle-hvAGCq"></div>
           <div class="textlabel-hvAGCq asdfad">동아리 연합</div>
         </div>
         <div class="group-4-C61RwL">
           <div class="textlabel-KOsP6k facetimestyle">􀱱</div>
           <div class="textlabel-aoJpZk asdfad">면접</div>
-          <div class="x20210308-202103-KOsP6k theintervuew and">
-            2021.03.08.-2021.03.09<br />NALSSAM 신입생<br />1차 선발
-          </div>
+          <div class="x20210308-202103-KOsP6k theintervuew and">2021.03.08.-2021.03.09NALSSAM 신입생 1차 선발</div>
         </div>
         <div class="group-2-C61RwL">
           <div class="rectangle-copy-zUixHA"></div>
-          <div class="textlabel-zUixHA sd48medium">작업을 효율적으로<br />피로 소모는<br />가장 최소화해서.</div>
+          <div class="textlabel-zUixHA sd48medium">작업을 효율적으로피로 소모는<br />가장 최소화해서.</div>
           <div class="nalssam-zUixHA nalssamcr48 sd47blue sd48colorfull sdthenewenwcolor sd48newcolor sd48bold">
             NALSSAM의 동아리실<br />
           </div>
@@ -341,18 +356,11 @@
           </div>
           <img
             class="asdfasddfafafga-fasdfasdf00007-zUixHA"
-            src="img/index-asdfasddfafafgasfasdfasdfasdf00007-40AD4609-0D6A-4F7C-BAB1-74D299FBFC32.png"
+            src="img/index-asdfasddfafafgasfasdfasdfasdf00007-9B9CC397-CA07-479A-A559-7D2034D6C7B1.png"
           />
         </div>
         <div class="kakao-talk2021-pg-comp-100000-C61RwL"></div>
-        <a href="https://jcw87.github.io/c2-sans-fight/" target="_blank"
-          ><img class="ester-egg-C61RwL" src="img/index-esteregg-98722552-7027-4A43-8870-7D61FA48D1E0@2x.png"
-        /></a>
         <div class="x-VMr6Om thebigwhite">시작은 미미하게...</div>
-        <img
-          class="x001-C61RwL"
-          src="img/index-u1102u1161u11afu1109u1162u11b7-u1109u1175u11afu110cu1165u11a8-u110bu1169u1110u1161-u1109u116eu110cu1165u11bc001-A039346B-F198-4A35-91A9-214D34C33343.jpg"
-        />
         <div class="bar-C61RwL">
           <div class="footer-enIJlq">
             <div class="group-ZXviDO">
@@ -377,51 +385,50 @@
         <div class="group-8-C61RwL">
           <div class="textlabel-3cZhlu sd21green">홍보 영상 시청하기</div>
           <div class="group-7-3cZhlu">
-            <img class="line-d71PT4" src="img/index-line-A57AEBAE-FDBE-46F6-95D3-B1BDCACAA82B@2x.png" />
-            <img class="line-6tkUdT" src="img/index-line-7E3F8062-D934-4859-85A5-2BA684B656F0@2x.png" />
+            <img class="line-d71PT4" src="img/index-line-9F528F4F-3402-4507-BCD9-C496F57AC0C2@2x.png" />
+            <img class="line-6tkUdT" src="img/index-line-C62CD3CB-3F44-4BB8-B2D3-F665DCBF6EED@2x.png" />
           </div>
         </div>
         <div class="the-hard-ware-C61RwL">
           <div class="hard-ware-slave-Lh8DxQ sd25">HardWare Slave</div>
           <div class="ai-Lh8DxQ moreim more">피지컬 컴퓨팅<br /><br />피지컬 컴퓨팅 &amp; AI<br /><br />3D 모델링</div>
-          <a href="sw.html">
+          <a href="hw.html">
             <div class="group-12-copy-Lh8DxQ">
               <div class="hw-page-xcE9OD applesdgothicneo-normal-caribbean-green-18px">HW Page로</div>
               <img
                 class="path-copy-xcE9OD"
-                src="img/index-path-copy-B7BFA695-E200-49FE-8935-3E641E1362EF@2x.png"
+                src="img/index-path-copy-D23FB032-759A-46E9-B17B-EA5761F8A713@2x.png"
               /></div
           ></a>
           <img
             class="x2-copy-Lh8DxQ"
-            src="img/index-ub77cuc778-2-uc544ub798-copy-A6A36D17-89CA-4DE3-A610-B4BB5157E95F@2x.png"
+            src="img/index-ub77cuc778-2-uc544ub798-copy-762ED806-F49A-4883-B177-42853B1A7AC1@2x.png"
           />
           <img
             class="x2-copy-xaI9EI"
-            src="img/index-ub77cuc778-2-uc544ub798-copy-A6A36D17-89CA-4DE3-A610-B4BB5157E95F@2x.png"
+            src="img/index-ub77cuc778-2-uc544ub798-copy-762ED806-F49A-4883-B177-42853B1A7AC1@2x.png"
           />
         </div>
         <div class="business-C61RwL">
           <div class="business-slave-Wiaq1W sd25">Business Slave</div>
-          <div class="copy-2-Wiaq1W moreim more">
-            대충 엄청나게 스게한<br /><br />
-            동아리 설명을 대충 <br /><br />짧게 짧게 씀<br /><br />와 신난다!
+          <div class="textlabel-Wiaq1W moreim more">
+            동아리 ‘날샘’의 관리자<br /><br />아이디어 ‘실현’<br /><br />IST ‘특기자’
           </div>
-          <a href="sw.html">
+          <a href="bm.html">
             <div class="group-12-copy-Wiaq1W">
               <div class="bm-page-PRkrZc applesdgothicneo-normal-caribbean-green-18px">BM Page로</div>
               <img
                 class="path-copy-PRkrZc"
-                src="img/index-path-copy-B7BFA695-E200-49FE-8935-3E641E1362EF@2x.png"
+                src="img/index-path-copy-D23FB032-759A-46E9-B17B-EA5761F8A713@2x.png"
               /></div
           ></a>
           <img
             class="x2-copy-Wiaq1W"
-            src="img/index-ub77cuc778-2-uc544ub798-copy-A6A36D17-89CA-4DE3-A610-B4BB5157E95F@2x.png"
+            src="img/index-ub77cuc778-2-uc544ub798-copy-762ED806-F49A-4883-B177-42853B1A7AC1@2x.png"
           />
           <img
             class="x2-copy-4IwKbr"
-            src="img/index-ub77cuc778-2-uc544ub798-copy-A6A36D17-89CA-4DE3-A610-B4BB5157E95F@2x.png"
+            src="img/index-ub77cuc778-2-uc544ub798-copy-762ED806-F49A-4883-B177-42853B1A7AC1@2x.png"
           />
         </div>
         <div class="soft-ware-C61RwL">
@@ -431,19 +438,19 @@
           </div>
           <img
             class="x2-copy-Cqd0xX"
-            src="img/index-ub77cuc778-2-uc544ub798-copy-A6A36D17-89CA-4DE3-A610-B4BB5157E95F@2x.png"
+            src="img/index-ub77cuc778-2-uc544ub798-copy-762ED806-F49A-4883-B177-42853B1A7AC1@2x.png"
           />
           <a href="sw.html">
             <div class="group-12-copy-Cqd0xX">
               <div class="sw-page-kzye9S applesdgothicneo-normal-caribbean-green-18px">SW Page로</div>
               <img
                 class="path-copy-kzye9S"
-                src="img/index-path-copy-B7BFA695-E200-49FE-8935-3E641E1362EF@2x.png"
+                src="img/index-path-copy-D23FB032-759A-46E9-B17B-EA5761F8A713@2x.png"
               /></div
           ></a>
           <img
             class="x2-copy-9XfIP7"
-            src="img/index-ub77cuc778-2-uc544ub798-copy-A6A36D17-89CA-4DE3-A610-B4BB5157E95F@2x.png"
+            src="img/index-ub77cuc778-2-uc544ub798-copy-762ED806-F49A-4883-B177-42853B1A7AC1@2x.png"
           />
         </div>
         <div class="g-slave-C61RwL">
@@ -451,53 +458,65 @@
           <div class="textlabel-AcGW2E moreim more">
             생명 ‘공학’ 동아리<br /><br />동아리 유일 토지 소유<br /><br />노벨과학 동아리<br /><br />R&amp;E 대회
           </div>
-          <a href="sw.html">
+          <a href="bio.html">
             <div class="group-12-copy-AcGW2E">
               <div class="bio-page-ELTpdZ applesdgothicneo-normal-caribbean-green-18px">BIO Page로</div>
               <img
                 class="path-copy-ELTpdZ"
-                src="img/index-path-copy-B7BFA695-E200-49FE-8935-3E641E1362EF@2x.png"
+                src="img/index-path-copy-D23FB032-759A-46E9-B17B-EA5761F8A713@2x.png"
               /></div
           ></a>
           <img
             class="x2-copy-AcGW2E"
-            src="img/index-ub77cuc778-2-uc544ub798-copy-A6A36D17-89CA-4DE3-A610-B4BB5157E95F@2x.png"
+            src="img/index-ub77cuc778-2-uc544ub798-copy-762ED806-F49A-4883-B177-42853B1A7AC1@2x.png"
           />
           <img
             class="x2-copy-hDo3rj"
-            src="img/index-ub77cuc778-2-uc544ub798-copy-A6A36D17-89CA-4DE3-A610-B4BB5157E95F@2x.png"
+            src="img/index-ub77cuc778-2-uc544ub798-copy-762ED806-F49A-4883-B177-42853B1A7AC1@2x.png"
           />
         </div>
         <img
           class="x-001-3-C61RwL"
-          src="img/index-ud68cuc800u314fu3147-uc778uc0bfub9d0-001-3-CFE6C606-E2E6-4D62-8EB2-E31C6D349C28.jpg"
+          src="img/index-ud68cuc800u314fu3147-uc778uc0bfub9d0-001-3-E0B5A670-DEA5-4253-88F5-D0F5F095CE6E.jpg"
+        />
+        <img
+          class="x001-C61RwL"
+          src="img/index-u1102u1161u11afu1109u1162u11b7-u1109u1175u11afu110cu1165u11a8-u110bu1169u1110u1161-u1109u116eu110cu1165u11bc001-19D41CA7-04CF-4C3F-B34B-6D0A80BC38DE.jpg"
         />
         <img
           class="x-mzXdH9"
-          src="img/index-u1102u1161u11afu1109u1162u11b7-u110bu1167u11abu1112u1167u11a8u110bu1170u11b8u1109u1161u110bu1175u1110u1173-955D48EB-13A5-4570-A16F-31967AF3C667.png"
+          src="img/index-u1102u1161u11afu1109u1162u11b7-u110bu1167u11abu1112u1167u11a8u110bu1170u11b8u1109u1161u110bu1175u1110u1173-C91EACA5-EAA4-4605-AADF-10170159DE10.png"
         />
         <a href="sw.html">
-          <div class="x32000003-C61RwL">
+          <div class="meoeomfpamsdfoa-lddkfasdd00003-C61RwL">
             <a href="sw.html" onclick="window.event.stopPropagation()"
-              ><img class="x32000003-89BXR6" src="img/index-32000003-2D75BC41-C26A-49DF-B030-5F32E47210C7@2x.png"
-            /></a></div
-        ></a>
-        <a href="bm.html">
-          <div class="x32000000-C61RwL">
-            <a href="bm.html" onclick="window.event.stopPropagation()"
-              ><img class="x32000000-vvTtxn" src="img/index-32000000-FB8A88DC-FA3B-4A78-9A7E-997DD1D479B5@2x.png"
+              ><img
+                class="meoeomfpamsdfoa-lddkfasdd00003-BhO0ex"
+                src="img/index-meoeomfpamsdfoasddfnaskdnflkasdlkfjalksjflkajsldkdfjlasjddflnasdnfoanosnvoiansdaksldflknaslkclkzkkxlcckakslddkfasdd00003-CD0FF128-994D-4D8C-A237-DEDA8A601ABC@2x.png"
             /></a></div
         ></a>
         <a href="hw.html">
-          <div class="x32000001-C61RwL">
+          <div class="meoeomfpamsdfoa-lddkfasdd00001-C61RwL">
             <a href="hw.html" onclick="window.event.stopPropagation()"
-              ><img class="x32000001-QZ6gqm" src="img/index-32000001-388949C3-256E-4D17-841C-4DACD742514C@2x.png"
+              ><img
+                class="meoeomfpamsdfoa-lddkfasdd00001-p45A1x"
+                src="img/index-meoeomfpamsdfoasddfnaskdnflkasdlkfjalksjflkajsldkdfjlasjddflnasdnfoanosnvoiansdaksldflknaslkclkzkkxlcckakslddkfasdd00001-BDA1A98C-C499-481E-B36B-45518A749EF4@2x.png"
+            /></a></div
+        ></a>
+        <a href="bm.html">
+          <div class="meoeomfpamsdfoa-lddkfasdd00000-C61RwL">
+            <a href="bm.html" onclick="window.event.stopPropagation()"
+              ><img
+                class="meoeomfpamsdfoa-lddkfasdd00000-RX1U68"
+                src="img/index-meoeomfpamsdfoasddfnaskdnflkasdlkfjalksjflkajsldkdfjlasjddflnasdnfoanosnvoiansdaksldflknaslkclkzkkxlcckakslddkfasdd00000-85661A3C-C87C-4AAD-A53A-CDE3D2DC9A74@2x.png"
             /></a></div
         ></a>
         <a href="bio.html">
-          <div class="x32000002-C61RwL">
+          <div class="meoeomfpamsdfoa-lddkfasdd00002-C61RwL">
             <a href="bio.html" onclick="window.event.stopPropagation()"
-              ><img class="x32000002-tDKCQ2" src="img/index-32000002-AAAFDEAF-67B5-4C5E-9D0A-B518F0B329E5@2x.png"
+              ><img
+                class="meoeomfpamsdfoa-lddkfasdd00002-UBpfx5"
+                src="img/index-meoeomfpamsdfoasddfnaskdnflkasdlkfjalksjflkajsldkdfjlasjddflnasdnfoanosnvoiansdaksldflknaslkclkzkkxlcckakslddkfasdd00002-6FD372AE-72C8-478B-AABE-05A3AC68D9BD@2x.png"
             /></a></div
         ></a>
       </div>
