--- a/src/main/resources/templates/bm.html
+++ b/src/main/resources/templates/bm.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=1440, maximum-scale=1.0" />
     <meta property="og:title" content="동아리 NALSSAM 지원하기">
     <meta property="og:description" content="2021년도 동아리 NALSSAM 노예 되기">
-    <meta property="og:image" content="./img/bio-3-C9239852-EAE4-440A-938E-E71B77F4B98B.png">
-    <link rel="shortcut icon" type="image/png" href="./img/logod.png" />
-    <meta name="og:type" content="website" />
+    <meta property="og:image" content="./img/cover.png">
     <meta property="og:url" content="https://www.nalssam.com" />
+    <link rel="shortcut icon" type="image/png" href="./img/cover.png" />
+    <meta name="og:type" content="website" />
     <link rel="stylesheet" type="text/css" href="css/bm.css" />
     <title>NALSSAM</title>
     <style>
@@ -241,19 +241,13 @@
         <div class="view-C61RwL">
           <div class="navbar-UOcbxe">
             <div class="hr-dIx87p"></div>
-            <a
-              href="https://docs.google.com/forms/d/e/1FAIpQLSeN4yuI6fxrqY3A1CYe7Y0yIaWwMlv7qVp9dXZnjb4Y6zYgxg/viewform?usp=sf_link"
-              target="_blank"
-            >
-              <div class="button-dIx87p"><div class="textlabel-63crYe ji1style">지원하기</div></div></a
-            >
           </div>
           <a href="index.html"><div class="nalssam-UOcbxe nalssamlogo">NALSSAM</div></a>
         </div>
         <div class="group-5-C61RwL">
           <div class="top-word-iZjIT4">
             <div class="textlabel-zHR6Gl sdsemi24">당신의 창업 커리어를 위한 동아리</div>
-            <div class="results-will-show-yo-zHR6Gl thebig">Results will show you.<br />BM팀을 소개합니다.</div>
+            <div class="the-results-will-sho-zHR6Gl thebig">The Results will show you.<br />BM팀을 소개합니다.</div>
           </div>
           <a
             href="https://docs.google.com/forms/d/e/1FAIpQLSeN4yuI6fxrqY3A1CYe7Y0yIaWwMlv7qVp9dXZnjb4Y6zYgxg/viewform?usp=sf_link"
@@ -272,32 +266,30 @@
         <div class="img0074-C61RwL"></div>
         <div class="group-2-C61RwL">
           <div class="textlabel-zUixHA thebig">본인에게 맞는 세부 역량을 찾아보세요.</div>
-          <img class="line-5-zUixHA" src="img/hw-line-5-163EB952-B348-4685-B876-2175AD5EFA36.png" />
-          <img class="line-5-sdxwGy" src="img/hw-line-5-163EB952-B348-4685-B876-2175AD5EFA36.png" />
-          <img class="line-5-kTiyrb" src="img/hw-line-5-163EB952-B348-4685-B876-2175AD5EFA36.png" />
+          <img class="line-5-zUixHA" src="img/bm-line-5-CD4A7D9A-ADF8-4149-8F83-6F1E7E360A48.png" />
+          <img class="line-5-sdxwGy" src="img/bm-line-5-CD4A7D9A-ADF8-4149-8F83-6F1E7E360A48.png" />
+          <img class="line-5-kTiyrb" src="img/bm-line-5-CD4A7D9A-ADF8-4149-8F83-6F1E7E360A48.png" />
           <div class="textlabel-sdxwGy sd36">기획을 현실로 만들수 있을 정도의 영향력</div>
           <div class="group-3-zUixHA">
             <div class="textlabel-iMKsSw sdmedium24">
-              눈부신 수상과 활동 실적으로 유명한 Nalssam BM팀은 이미 능력이 보장된 동아리입니다. 이미 BM팀이
-              <br />기획한 많은 활동들이 실현되었죠. 당신이 기획한 프로젝트가 교내에서 실현되는 것을 목격하세요.
+              눈부신 수상과 활동 실적으로 유명한 Nalssam BM팀은 이미 능력이 보장된 동아리입니다. 이미 BM팀이 기획한 많은 활동들이 실현되었죠. 당신이 기획한 프로젝트가 교내에서 실현되는 것을 목격하세요.
             </div>
           </div>
           <div class="group-4-zUixHA">
             <div class="bm-nalssam-Ylg7MA sdmedium24">
-              BM팀은 Nalssam 창업 활동의 주체입니다. 개인의 소중한 아이디어를 검토하고 채택된 아이디어로 창업
-              <br />활동을 진행하죠. 2020년에는 인공지능 기술을 활용한 APP &#39;캡칭플랜츠&#39;로 모의 크라우드 펀딩,
-              온라인 <br />쇼핑몰 개설 등을 진행했고, 2021에는 법인 설립, 개인 사업자 등록 등으로 실제 창업을 이루어
-              내겠다는 <br />원대한 계획을 진행중입니다. 당신의 아이디어로 창업을 하고 싶다면 Nalssam BM팀은 최선의
-              선택일 <br />것입니다.
+              BM팀은 Nalssam 창업 활동의 주체입니다. 개인의 소중한 아이디어를 검토하고 채택된 아이디어로 창업 활동을 진행하죠. 2020년에는 인공지능 기술을 활용한 APP &#39;캡칭플랜츠&#39;로 모의 크라우드 펀딩,
+              온라인 쇼핑몰 개설 등을 진행했고, 2021에는 법인 설립, 개인 사업자 등록 등으로 실제 창업을 이루어
+              내겠다는 원대한 계획을 진행중입니다. 당신의 아이디어로 창업을 하고 싶다면 Nalssam BM팀은 최선의
+              선택일 것입니다.
             </div>
             <div class="textlabel-Ylg7MA sd36">아이디어의 실현 그 이상을 바라보다</div>
           </div>
           <div class="group-4-sdxwGy">
             <div class="nalssam-xtVPWN sdmedium24">
               Nalssam의 주요 활동들의 처음과 끝은 BM팀 담당입니다. 각종 대회 상금과 동아리 지원금으로 각 팀을
-              <br />서포트 하며 활동 보고서, 예산서 작성 등 동아리 전반의 걸쳐서 운영에 참여하며 공동체 역량의 성장과
-              <br />업무처리 능력을 가지게 되는 것은 Nalssam BM팀의 기본입니다. BM팀에 발을 들이는 순간부터 당신은
-              <br />이미 인재가 된 셈이죠
+              서포트 하며 활동 보고서, 예산서 작성 등 동아리 전반의 걸쳐서 운영에 참여하며 공동체 역량의 성장과
+              업무처리 능력을 가지게 되는 것은 Nalssam BM팀의 기본입니다. BM팀에 발을 들이는 순간부터 당신은
+              이미 인재가 된 셈이죠
             </div>
             <div class="first-in-last-out-xtVPWN sd36">First in, Last out</div>
           </div>
@@ -336,33 +328,40 @@
             </div>
           </div>
         </div>
-        <div class="group-6-C61RwL">
-          <div class="stacked-group-PIEh7b">
-            <a href="sw.html"> <div class="sw-logo-6NpaO9"></div></a>
-            <img class="line-2-6NpaO9" src="img/index-line-3-0ACD2E49-327D-4AE9-9D76-C17263651F94@2x.png" />
-            <a href="bm.html"
-              ><img
-                class="x00002-6NpaO9"
-                src="img/bm-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900002-088264A5-6D42-44BE-9400-2521E0C0E192@2x.png"
-            /></a>
-            <img class="line-3-6NpaO9" src="img/index-line-3-0ACD2E49-327D-4AE9-9D76-C17263651F94@2x.png" />
-            <a href="hw.html"
-              ><img
-                class="x00001-6NpaO9"
-                src="img/hw-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900001-6BF45C9F-7F8D-4D98-BBE0-8224395F2912@2x.png"
-            /></a>
-            <img class="line-3-D4WyEx" src="img/index-line-3-0ACD2E49-327D-4AE9-9D76-C17263651F94@2x.png" />
-            <a href="bio.html"> <div class="g-slave-6NpaO9"></div></a>
-            <img class="line-3-VX9NFJ" src="img/index-line-3-0ACD2E49-327D-4AE9-9D76-C17263651F94@2x.png" />
-            <a href="a404.html"> <div class="cr-6NpaO9"></div></a>
-            <img class="line-3-e8LPZY" src="img/index-line-3-0ACD2E49-327D-4AE9-9D76-C17263651F94@2x.png" />
-            <a href="a404.html">
-              <div class="more00000-6NpaO9">
-                <a href="a404.html" onclick="window.event.stopPropagation()"
-                  ><img class="more00000-V9ZBCi" src="img/bio-more00000-775F189C-BA27-4692-8E0E-0CF1597B1523@2x.png"
-                /></a></div
-            ></a>
+        <div class="group-11-C61RwL">
+          <div class="group-6-bAyQtV">
+            <div class="stacked-group-W8YgeY">
+              <a href="sw.html"> <div class="sw-logo-xd0wTK"></div></a>
+              <img class="line-2-xd0wTK" src="img/bm-line-3-0CB98E8B-7DD7-4CA7-A98E-654C9096F029@2x.png" />
+              <a href="bm.html"
+                ><img
+                  class="x00002-xd0wTK"
+                  src="img/sw-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900002-C8BAD57E-9D4B-4694-AE23-AA289E64697F@2x.png"
+              /></a>
+              <img class="line-3-xd0wTK" src="img/bm-line-3-0CB98E8B-7DD7-4CA7-A98E-654C9096F029@2x.png" />
+              <a href="hw.html"
+                ><img
+                  class="x00001-xd0wTK"
+                  src="img/bm-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900001-DC64220C-B753-410C-9435-79B8A2BC751F@2x.png"
+              /></a>
+              <img class="line-3-Hxo22Q" src="img/bm-line-3-0CB98E8B-7DD7-4CA7-A98E-654C9096F029@2x.png" />
+              <a href="bio.html"> <div class="g-slave-xd0wTK"></div></a>
+              <img class="line-3-HrtGqK" src="img/bm-line-3-0CB98E8B-7DD7-4CA7-A98E-654C9096F029@2x.png" />
+              <a href="a404.html"> <div class="cr-xd0wTK"></div></a>
+              <img class="line-3-xLcPb5" src="img/bm-line-3-0CB98E8B-7DD7-4CA7-A98E-654C9096F029@2x.png" />
+              <a href="a404.html">
+                <div class="more00000-xd0wTK">
+                  <a href="a404.html" onclick="window.event.stopPropagation()"
+                    ><img class="more00000-TVJ55C" src="img/bio-more00000-904D57A4-C295-49A9-8391-80D5A2DC7E2A@2x.png"
+                  /></a></div
+              ></a>
+            </div>
           </div>
+          <div class="click-bAyQtV moreim more">Click!</div>
+          <div class="click-zLZUBK moreim more">Click!</div>
+          <div class="click-3qshht moreim more">Click!</div>
+          <div class="click-hdKSmR moreim more">Click!</div>
+          <div class="click-waRZGu moreim more">Click!</div>
         </div>
       </div>
     </div>
