--- a/src/main/resources/templates/css/hw.css
+++ b/src/main/resources/templates/css/hw.css
@@ -66,14 +66,6 @@
   position: relative;
   width: 1440px;
 }
-.hw .button-dIx87p {
-  background-color: var(--caribbean-green);
-  height: 24px;
-  left: 1067px;
-  position: absolute;
-  top: 15px;
-  width: 123px;
-}
 .hw .button-iZjIT4 {
   background-color: var(--caribbean-green);
   height: 60px;
@@ -82,9 +74,74 @@
   top: 186px;
   width: 218px;
 }
-.hw .cr-6NpaO9 {
+.hw .click-3qshht {
   background-color: transparent;
-  background-image: url(../img/bio-asdfasddfafafgasfasdfasdfasdf00007-88163F3D-8851-47B3-9CE3-B25F4E3B0CF8@2x.png);
+  color: var(--white);
+  font-weight: 200;
+  height: auto;
+  left: 609px;
+  line-height: 24px;
+  position: absolute;
+  text-align: left;
+  top: 120px;
+  white-space: nowrap;
+  width: auto;
+}
+.hw .click-bAyQtV {
+  background-color: transparent;
+  color: var(--white);
+  font-weight: 200;
+  height: auto;
+  left: 213px;
+  line-height: 24px;
+  position: absolute;
+  text-align: left;
+  top: 120px;
+  white-space: nowrap;
+  width: auto;
+}
+.hw .click-hdKSmR {
+  background-color: transparent;
+  color: var(--white);
+  font-weight: 200;
+  height: auto;
+  left: 807px;
+  line-height: 24px;
+  position: absolute;
+  text-align: left;
+  top: 120px;
+  white-space: nowrap;
+  width: auto;
+}
+.hw .click-waRZGu {
+  background-color: transparent;
+  color: var(--white);
+  font-weight: 200;
+  height: auto;
+  left: 1005px;
+  line-height: 24px;
+  position: absolute;
+  text-align: left;
+  top: 120px;
+  white-space: nowrap;
+  width: auto;
+}
+.hw .click-zLZUBK {
+  background-color: transparent;
+  color: var(--white);
+  font-weight: 200;
+  height: auto;
+  left: 411px;
+  line-height: 24px;
+  position: absolute;
+  text-align: left;
+  top: 120px;
+  white-space: nowrap;
+  width: auto;
+}
+.hw .cr-xd0wTK {
+  background-color: transparent;
+  background-image: url(../img/bm-asdfasddfafafgasfasdfasdfasdf00007-FF9BC485-D87B-4D39-B8E2-6D653FA4CFCC@2x.png);
   background-size: 100% 100%;
   height: 97px;
   margin: 0 0 0 50px;
@@ -124,14 +181,22 @@
   top: 870px;
   width: auto;
 }
-.hw .g-slave-6NpaO9 {
+.hw .g-slave-xd0wTK {
   background-color: transparent;
-  background-image: url(../img/bio-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900004-B93B4A11-6998-45C7-AB0F-5C29D33B21A8@2x.png);
+  background-image: url(../img/sw-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900004-0F0282D7-032D-4CC7-B765-74579D72A2AE@2x.png);
   background-size: 100% 100%;
   height: 97px;
   margin: 0 0 0 50px;
   position: relative;
   width: 97px;
+}
+.hw .group-11-C61RwL {
+  background-color: transparent;
+  height: 146px;
+  left: 0px;
+  position: absolute;
+  top: 50px;
+  width: 1442px;
 }
 .hw .group-15-SHDHHB {
   background: linear-gradient(225deg, #32C5FF 0%, #B620E0 51%, #F7B500 100%);
@@ -174,12 +239,12 @@
   top: 309px;
   width: 652px;
 }
-.hw .group-6-C61RwL {
+.hw .group-6-bAyQtV {
   background-color: var(--bunker);
   height: 146px;
   left: 0px;
   position: absolute;
-  top: 53px;
+  top: 0px;
   width: 1442px;
 }
 .hw .group-i7hrr4 {
@@ -202,7 +267,7 @@
   background-color: var(--mine-shaft);
   height: 1px;
   left: 0px;
-  position: absolute;
+  position: relative;
   top: 52px;
   width: 1440px;
 }
@@ -238,35 +303,35 @@
   top: 291px;
   width: auto;
 }
-.hw .line-2-6NpaO9 {
+.hw .line-2-xd0wTK {
   background-color: transparent;
   height: 72px;
   margin: 0 0 0 50px;
   position: relative;
   width: 1px;
 }
-.hw .line-3-6NpaO9 {
+.hw .line-3-HrtGqK {
   background-color: transparent;
   height: 72px;
   margin: 0 0 0 50px;
   position: relative;
   width: 1px;
 }
-.hw .line-3-D4WyEx {
+.hw .line-3-Hxo22Q {
   background-color: transparent;
   height: 72px;
   margin: 0 0 0 50px;
   position: relative;
   width: 1px;
 }
-.hw .line-3-VX9NFJ {
+.hw .line-3-xLcPb5 {
   background-color: transparent;
   height: 72px;
   margin: 0 0 0 50px;
   position: relative;
   width: 1px;
 }
-.hw .line-3-e8LPZY {
+.hw .line-3-xd0wTK {
   background-color: transparent;
   height: 72px;
   margin: 0 0 0 50px;
@@ -305,19 +370,19 @@
   top: 166px;
   width: 944px;
 }
-.hw .more00000-6NpaO9 {
-  background-color: transparent;
-  height: 32px;
-  margin: 0 0 0 50px;
-  position: relative;
-  width: 84px;
-}
-.hw .more00000-V9ZBCi {
+.hw .more00000-TVJ55C {
   background-color: transparent;
   height: 32px;
   left: 0px;
   position: absolute;
   top: 0px;
+  width: 84px;
+}
+.hw .more00000-xd0wTK {
+  background-color: transparent;
+  height: 32px;
+  margin: 0 0 0 50px;
+  position: relative;
   width: 84px;
 }
 .hw .nalssam-PZ5l3E {
@@ -391,7 +456,7 @@
   top: 3595px;
   width: 1440px;
 }
-.hw .stacked-group-PIEh7b {
+.hw .stacked-group-W8YgeY {
   align-items: center;
   background-color: transparent;
   display: flex;
@@ -403,27 +468,14 @@
   top: 23px;
   width: auto;
 }
-.hw .sw-logo-6NpaO9 {
+.hw .sw-logo-xd0wTK {
   background-color: transparent;
-  background-image: url(../img/bio-swlogo-EE3530C2-879E-487F-8319-E698374DF302@2x.png);
+  background-image: url(../img/sw-swlogo-CDA1FCD5-FC09-4C68-B38C-EFADE8323762@2x.png);
   background-size: 100% 100%;
   height: 97px;
   margin: 0;
   position: relative;
   width: 97px;
-}
-.hw .textlabel-63crYe {
-  background-color: transparent;
-  color: var(--white);
-  font-weight: 800;
-  height: auto;
-  left: 10px;
-  line-height: 22px;
-  position: absolute;
-  text-align: center;
-  top: 1px;
-  white-space: nowrap;
-  width: 103px;
 }
 .hw .textlabel-D44yGU {
   background-color: transparent;
@@ -595,7 +647,7 @@
 }
 .hw .x00000-C61RwL {
   background-color: transparent;
-  background-image: url(../img/hw-u1102u1161u11afu110cu1161u11bcu1107u117500000-27DC8980-16F0-42A8-AD14-7A0266383B92.png);
+  background-image: url(../img/hw-u1102u1161u11afu110cu1161u11bcu1107u117500000-86B78F41-DCA7-4690-867A-896AD483F4FD.png);
   background-size: 100% 100%;
   height: 595px;
   left: -1px;
@@ -603,14 +655,14 @@
   top: 659px;
   width: 1440px;
 }
-.hw .x00001-6NpaO9 {
+.hw .x00001-xd0wTK {
   background-color: transparent;
   height: 97px;
   margin: 0 0 0 50px;
   position: relative;
   width: 97px;
 }
-.hw .x00002-6NpaO9 {
+.hw .x00002-xd0wTK {
   background-color: transparent;
   height: 97px;
   margin: 0 0 0 50px;
@@ -658,7 +710,7 @@
 }
 .hw .x2-hvAGCq {
   background-color: transparent;
-  background-image: url(../img/hw-2-4F96BB27-E4E5-4540-8FC4-FAC38BECDB10.png);
+  background-image: url(../img/hw-2-64276360-63BF-4D70-B3B0-F1739E2178D4.png);
   background-size: 100% 100%;
   height: 736px;
   left: 0px;
@@ -721,10 +773,6 @@
   font-family: "AppleSDGothicNeo-Regular", Helvetica, Arial, serif;
   font-size: 12px;
   letter-spacing: -0.12px;
-}
-.ji1style {
-  font-family: "AppleSDGothicNeo-ExtraBold", Helvetica, Arial, serif;
-  font-size: 18px;
 }
 .more {
   font-family: "AppleSDGothicNeo-UltraLight", Helvetica, Arial, serif;
