--- a/src/main/resources/templates/css/index.css
+++ b/src/main/resources/templates/css/index.css
@@ -62,7 +62,7 @@
   position: absolute;
   text-align: left;
   top: 124px;
-  width: 134px;
+  width: 153px;
 }
 .index .asdfasddfafafga-fasdfasdf00007-zUixHA {
   background-color: transparent;
@@ -106,6 +106,14 @@
   white-space: nowrap;
   width: 232px;
 }
+.index .bitmap-C61RwL {
+  background-color: transparent;
+  height: 17px;
+  left: 1432px;
+  position: absolute;
+  top: 2318px;
+  width: 8px;
+}
 .index .bm-page-PRkrZc {
   background-color: transparent;
   font-weight: 200;
@@ -122,9 +130,9 @@
 .index .business-C61RwL {
   background-color: transparent;
   height: 431px;
-  left: 993px;
+  left: 996px;
   position: absolute;
-  top: 3775px;
+  top: 1735px;
   width: 206px;
 }
 .index .business-slave-Wiaq1W {
@@ -144,53 +152,82 @@
   height: 60px;
   left: 611px;
   position: absolute;
-  top: 387px;
+  top: 400px;
   width: 218px;
 }
-.index .button-dIx87p {
+.index .click-3qshht {
   background-color: transparent;
-  height: 24px;
-  left: 1079px;
-  position: absolute;
-  top: 14px;
-  width: 125px;
-}
-.index .copy-2-Wiaq1W {
-  background-color: transparent;
-  color: var(--black);
+  color: var(--white);
   font-weight: 200;
   height: auto;
-  left: 25px;
+  left: 609px;
   line-height: 24px;
   position: absolute;
   text-align: left;
-  top: 124px;
-  width: 153px;
+  top: 120px;
+  white-space: nowrap;
+  width: auto;
 }
-.index .cr-6NpaO9 {
+.index .click-bAyQtV {
   background-color: transparent;
-  background-image: url(../img/bio-asdfasddfafafgasfasdfasdfasdf00007-88163F3D-8851-47B3-9CE3-B25F4E3B0CF8@2x.png);
+  color: var(--white);
+  font-weight: 200;
+  height: auto;
+  left: 213px;
+  line-height: 24px;
+  position: absolute;
+  text-align: left;
+  top: 120px;
+  white-space: nowrap;
+  width: auto;
+}
+.index .click-hdKSmR {
+  background-color: transparent;
+  color: var(--white);
+  font-weight: 200;
+  height: auto;
+  left: 807px;
+  line-height: 24px;
+  position: absolute;
+  text-align: left;
+  top: 120px;
+  white-space: nowrap;
+  width: auto;
+}
+.index .click-waRZGu {
+  background-color: transparent;
+  color: var(--white);
+  font-weight: 200;
+  height: auto;
+  left: 1005px;
+  line-height: 24px;
+  position: absolute;
+  text-align: left;
+  top: 120px;
+  white-space: nowrap;
+  width: auto;
+}
+.index .click-zLZUBK {
+  background-color: transparent;
+  color: var(--white);
+  font-weight: 200;
+  height: auto;
+  left: 411px;
+  line-height: 24px;
+  position: absolute;
+  text-align: left;
+  top: 120px;
+  white-space: nowrap;
+  width: auto;
+}
+.index .cr-xd0wTK {
+  background-color: transparent;
+  background-image: url(../img/bm-asdfasddfafafgasfasdfasdfasdf00007-FF9BC485-D87B-4D39-B8E2-6D653FA4CFCC@2x.png);
   background-size: 100% 100%;
   height: 97px;
   margin: 0 0 0 50px;
   position: relative;
   width: 97px;
-}
-.index .ester-egg-C61RwL {
-  background-color: transparent;
-  height: 21px;
-  left: 1431px;
-  position: absolute;
-  top: 4663px;
-  width: 9px;
-}
-.index .fill-63crYe {
-  background-color: var(--caribbean-green);
-  height: 24px;
-  left: 0px;
-  position: absolute;
-  top: 0px;
-  width: 124px;
 }
 .index .footer-enIJlq {
   background-color: var(--eerie-black);
@@ -200,29 +237,29 @@
   top: 0px;
   width: 1440px;
 }
-.index .g-slave-6NpaO9 {
+.index .g-slave-C61RwL {
   background-color: transparent;
-  background-image: url(../img/bio-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900004-B93B4A11-6998-45C7-AB0F-5C29D33B21A8@2x.png);
+  height: 429px;
+  left: 745px;
+  position: absolute;
+  top: 1735px;
+  width: 206px;
+}
+.index .g-slave-xd0wTK {
+  background-color: transparent;
+  background-image: url(../img/sw-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900004-0F0282D7-032D-4CC7-B765-74579D72A2AE@2x.png);
   background-size: 100% 100%;
   height: 97px;
   margin: 0 0 0 50px;
   position: relative;
   width: 97px;
 }
-.index .g-slave-C61RwL {
-  background-color: transparent;
-  height: 429px;
-  left: 742px;
-  position: absolute;
-  top: 3775px;
-  width: 206px;
-}
 .index .google-ads-hvAGCq {
   background-color: transparent;
   color: rgba(250,251,255,1.0);
   font-weight: 800;
   height: auto;
-  left: 102px;
+  left: 101px;
   line-height: 69px;
   position: absolute;
   text-align: left;
@@ -249,6 +286,14 @@
   position: absolute;
   top: 563px;
   width: 193px;
+}
+.index .group-11-C61RwL {
+  background-color: transparent;
+  height: 146px;
+  left: 0px;
+  position: absolute;
+  top: 50px;
+  width: 1442px;
 }
 .index .group-12-copy-AcGW2E {
   background-color: transparent;
@@ -295,10 +340,10 @@
   background-color: transparent;
   border-radius: 39px;
   height: 827px;
-  left: 202px;
+  left: 203px;
   position: absolute;
   top: 7969px;
-  width: 520px;
+  width: 519px;
 }
 .index .group-4-C61RwL {
   background: linear-gradient(180deg, #FFAA3D 0%, #FFDF61 100%);
@@ -313,17 +358,17 @@
 .index .group-5-C61RwL {
   background-color: transparent;
   height: 670px;
-  left: 184px;
+  left: 186px;
   position: absolute;
-  top: 4444px;
+  top: 2376px;
   width: 1081px;
 }
-.index .group-6-C61RwL {
+.index .group-6-bAyQtV {
   background-color: var(--bunker);
   height: 146px;
   left: 0px;
   position: absolute;
-  top: 50px;
+  top: 0px;
   width: 1442px;
 }
 .index .group-7-3cZhlu {
@@ -337,17 +382,17 @@
 .index .group-8-C61RwL {
   background-color: transparent;
   height: 25px;
-  left: 645px;
+  left: 648px;
   position: absolute;
-  top: 3383px;
+  top: 1343px;
   width: 172px;
 }
 .index .group-9-C61RwL {
   background-color: transparent;
   height: 679px;
-  left: 174px;
+  left: 176px;
   position: absolute;
-  top: 5159px;
+  top: 3091px;
   width: 1081px;
 }
 .index .group-ZXviDO {
@@ -390,7 +435,7 @@
   background-color: var(--mine-shaft);
   height: 1px;
   left: 0px;
-  position: absolute;
+  position: relative;
   top: 52px;
   width: 1442px;
 }
@@ -409,43 +454,43 @@
 }
 .index .kakao-talk2021-pg-comp-100000-C61RwL {
   background-color: transparent;
-  background-image: url(../img/index-kakaotalk20210208201052745jpg-comp-100000-7D3489CF-498B-4E8D-84E6-D4D469E8A9F8.png);
+  background-image: url(../img/index-kakaotalk20210208201052745jpg-comp-100000-62F9A77A-734D-4C47-9393-6F66A5AF0F03.png);
   background-size: 100% 100%;
   height: 627px;
   left: 0px;
   position: absolute;
-  top: 456px;
+  top: 492px;
   width: 1440px;
 }
-.index .line-2-6NpaO9 {
+.index .line-2-xd0wTK {
   background-color: transparent;
   height: 72px;
   margin: 0 0 0 50px;
   position: relative;
   width: 1px;
 }
-.index .line-3-6NpaO9 {
+.index .line-3-HrtGqK {
   background-color: transparent;
   height: 72px;
   margin: 0 0 0 50px;
   position: relative;
   width: 1px;
 }
-.index .line-3-D4WyEx {
+.index .line-3-Hxo22Q {
   background-color: transparent;
   height: 72px;
   margin: 0 0 0 50px;
   position: relative;
   width: 1px;
 }
-.index .line-3-VX9NFJ {
+.index .line-3-xLcPb5 {
   background-color: transparent;
   height: 72px;
   margin: 0 0 0 50px;
   position: relative;
   width: 1px;
 }
-.index .line-3-e8LPZY {
+.index .line-3-xd0wTK {
   background-color: transparent;
   height: 72px;
   margin: 0 0 0 50px;
@@ -468,19 +513,83 @@
   top: 1px;
   width: 10px;
 }
-.index .more00000-6NpaO9 {
+.index .meoeomfpamsdfoa-lddkfasdd00000-C61RwL {
   background-color: transparent;
-  height: 32px;
-  margin: 0 0 0 50px;
-  position: relative;
-  width: 84px;
+  height: 291px;
+  left: 998px;
+  position: absolute;
+  top: 1414px;
+  width: 204px;
 }
-.index .more00000-V9ZBCi {
+.index .meoeomfpamsdfoa-lddkfasdd00000-RX1U68 {
+  background-color: transparent;
+  height: 291px;
+  left: 0px;
+  position: absolute;
+  top: 0px;
+  width: 204px;
+}
+.index .meoeomfpamsdfoa-lddkfasdd00001-C61RwL {
+  background-color: transparent;
+  height: 291px;
+  left: 495px;
+  position: absolute;
+  top: 1414px;
+  width: 204px;
+}
+.index .meoeomfpamsdfoa-lddkfasdd00001-p45A1x {
+  background-color: transparent;
+  height: 291px;
+  left: 0px;
+  position: absolute;
+  top: 0px;
+  width: 204px;
+}
+.index .meoeomfpamsdfoa-lddkfasdd00002-C61RwL {
+  background-color: transparent;
+  height: 291px;
+  left: 747px;
+  position: absolute;
+  top: 1414px;
+  width: 204px;
+}
+.index .meoeomfpamsdfoa-lddkfasdd00002-UBpfx5 {
+  background-color: transparent;
+  height: 291px;
+  left: 0px;
+  position: absolute;
+  top: 0px;
+  width: 204px;
+}
+.index .meoeomfpamsdfoa-lddkfasdd00003-BhO0ex {
+  background-color: transparent;
+  height: 291px;
+  left: 0px;
+  position: absolute;
+  top: 0px;
+  width: 204px;
+}
+.index .meoeomfpamsdfoa-lddkfasdd00003-C61RwL {
+  background-color: transparent;
+  height: 291px;
+  left: 243px;
+  position: absolute;
+  top: 1414px;
+  width: 204px;
+}
+.index .more00000-TVJ55C {
   background-color: transparent;
   height: 32px;
   left: 0px;
   position: absolute;
   top: 0px;
+  width: 84px;
+}
+.index .more00000-xd0wTK {
+  background-color: transparent;
+  height: 32px;
+  margin: 0 0 0 50px;
+  position: relative;
   width: 84px;
 }
 .index .nalssam-5v6six {
@@ -566,11 +675,11 @@
   color: var(--black);
   font-weight: 800;
   height: auto;
-  left: 358px;
+  left: 361px;
   line-height: 72px;
   position: absolute;
   text-align: center;
-  top: 3281px;
+  top: 1241px;
   white-space: nowrap;
   width: 744px;
 }
@@ -630,16 +739,16 @@
   background-color: var(--white);
   height: 679px;
   left: 0px;
-  position: absolute;
+  position: relative;
   top: 0px;
   width: 1080px;
 }
 .index .rectangle-C61RwL {
   background-color: rgba(242,242,242,1.0);
   height: 1518px;
-  left: 1px;
+  left: 3px;
   position: absolute;
-  top: 4386px;
+  top: 2318px;
   width: 1439px;
 }
 .index .rectangle-VMr6Om {
@@ -660,15 +769,6 @@
   top: 0px;
   width: 1070px;
 }
-.index .rectangle-hvAGCq {
-  background-color: rgba(215,215,215,1.0);
-  border: 1px solid rgba(150,150,150,1.0);
-  height: 35px;
-  left: 101px;
-  position: absolute;
-  top: 662px;
-  width: 109px;
-}
 .index .rectangle-iZjIT4 {
   background-color: var(--white);
   height: 670px;
@@ -679,19 +779,19 @@
 }
 .index .rectangle-mzXdH9 {
   background-color: transparent;
-  height: 551px;
-  left: 255px;
+  height: 679px;
+  left: 143px;
   overflow: hidden;
   position: absolute;
-  top: 5231px;
-  width: 939px;
+  top: 3091px;
+  width: 1158px;
 }
 .index .soft-ware-C61RwL {
   background-color: transparent;
   height: 430px;
-  left: 240px;
+  left: 243px;
   position: absolute;
-  top: 3775px;
+  top: 1735px;
   width: 206px;
 }
 .index .soft-ware-slave-Cqd0xX {
@@ -706,7 +806,7 @@
   top: 0px;
   width: 167px;
 }
-.index .stacked-group-PIEh7b {
+.index .stacked-group-W8YgeY {
   align-items: center;
   background-color: transparent;
   display: flex;
@@ -718,9 +818,9 @@
   top: 23px;
   width: auto;
 }
-.index .sw-logo-6NpaO9 {
+.index .sw-logo-xd0wTK {
   background-color: transparent;
-  background-image: url(../img/bio-swlogo-EE3530C2-879E-487F-8319-E698374DF302@2x.png);
+  background-image: url(../img/sw-swlogo-CDA1FCD5-FC09-4C68-B38C-EFADE8323762@2x.png);
   background-size: 100% 100%;
   height: 97px;
   margin: 0;
@@ -753,19 +853,6 @@
   white-space: nowrap;
   width: 157px;
 }
-.index .textlabel-63crYe {
-  background-color: transparent;
-  color: var(--white);
-  font-weight: 800;
-  height: auto;
-  left: 10px;
-  line-height: 22px;
-  position: absolute;
-  text-align: center;
-  top: 1px;
-  white-space: nowrap;
-  width: 103px;
-}
 .index .textlabel-AcGW2E {
   background-color: transparent;
   color: var(--black);
@@ -776,7 +863,7 @@
   position: absolute;
   text-align: left;
   top: 124px;
-  width: 157px;
+  width: 170px;
 }
 .index .textlabel-C61RwL {
   background-color: transparent;
@@ -803,7 +890,7 @@
   position: absolute;
   text-align: left;
   top: 124px;
-  width: 153px;
+  width: 171px;
 }
 .index .textlabel-KOsP6k {
   background-color: transparent;
@@ -817,6 +904,18 @@
   top: 166px;
   white-space: nowrap;
   width: 241px;
+}
+.index .textlabel-Wiaq1W {
+  background-color: transparent;
+  color: var(--black);
+  font-weight: 200;
+  height: auto;
+  left: 25px;
+  line-height: 24px;
+  position: absolute;
+  text-align: left;
+  top: 124px;
+  width: 170px;
 }
 .index .textlabel-aoJpZk {
   background-color: transparent;
@@ -836,7 +935,7 @@
   color: var(--white);
   font-weight: 700;
   height: auto;
-  left: 49px;
+  left: 48px;
   line-height: 21px;
   position: absolute;
   text-align: left;
@@ -885,9 +984,9 @@
 .index .the-hard-ware-C61RwL {
   background-color: transparent;
   height: 429px;
-  left: 491px;
+  left: 494px;
   position: absolute;
-  top: 3776px;
+  top: 1736px;
   width: 206px;
 }
 .index .view-C61RwL {
@@ -925,9 +1024,9 @@
 .index .x-001-3-C61RwL {
   background-color: transparent;
   height: 671px;
-  left: 184px;
+  left: 186px;
   position: absolute;
-  top: 4443px;
+  top: 2375px;
   width: 1081px;
 }
 .index .x-C61RwL {
@@ -971,20 +1070,20 @@
 }
 .index .x-mzXdH9 {
   background-color: transparent;
-  height: 873px;
-  left: -49px;
+  height: 913px;
+  left: -43px;
   position: absolute;
-  top: 6272px;
-  width: 1440px;
+  top: 6221px;
+  width: 1491px;
 }
-.index .x00001-6NpaO9 {
+.index .x00001-xd0wTK {
   background-color: transparent;
   height: 97px;
   margin: 0 0 0 50px;
   position: relative;
   width: 97px;
 }
-.index .x00002-6NpaO9 {
+.index .x00002-xd0wTK {
   background-color: transparent;
   height: 97px;
   margin: 0 0 0 50px;
@@ -996,7 +1095,7 @@
   height: 2019px;
   left: -7px;
   position: absolute;
-  top: 1168px;
+  top: 3884px;
   width: 1454px;
 }
 .index .x010-29-ZXviDO {
@@ -1102,93 +1201,17 @@
   top: 361px;
   width: 205px;
 }
-.index .x2020-9dtg3L {
-  background-color: transparent;
-  color: var(--black);
-  font-weight: 800;
-  height: auto;
-  left: 55px;
-  line-height: 25px;
-  position: absolute;
-  text-align: center;
-  top: 40px;
-  width: 201px;
-}
 .index .x20210308-202103-KOsP6k {
   background-color: transparent;
   color: var(--white);
   font-weight: 600;
   height: auto;
-  left: 69px;
+  left: 59px;
   line-height: 43px;
   position: absolute;
   text-align: center;
-  top: 438px;
-  width: 382px;
-}
-.index .x32000000-C61RwL {
-  background-color: transparent;
-  height: 291px;
-  left: 995px;
-  position: absolute;
-  top: 3454px;
-  width: 204px;
-}
-.index .x32000000-vvTtxn {
-  background-color: transparent;
-  height: 291px;
-  left: 0px;
-  position: absolute;
-  top: 0px;
-  width: 204px;
-}
-.index .x32000001-C61RwL {
-  background-color: transparent;
-  height: 291px;
-  left: 492px;
-  position: absolute;
-  top: 3454px;
-  width: 204px;
-}
-.index .x32000001-QZ6gqm {
-  background-color: transparent;
-  height: 291px;
-  left: 0px;
-  position: absolute;
-  top: 0px;
-  width: 204px;
-}
-.index .x32000002-C61RwL {
-  background-color: transparent;
-  height: 291px;
-  left: 742px;
-  position: absolute;
-  top: 3454px;
-  width: 204px;
-}
-.index .x32000002-tDKCQ2 {
-  background-color: transparent;
-  height: 291px;
-  left: 0px;
-  position: absolute;
-  top: 0px;
-  width: 204px;
-}
-.index .x32000003-89BXR6 {
-  background-color: transparent;
-  height: 291px;
-  left: 0px;
-  position: absolute;
-  top: 0px;
-  width: 204px;
-}
-.index .x32000003-C61RwL {
-  background-color: transparent;
-  height: 291px;
-  left: 240px;
-  position: absolute;
-  top: 3454px;
-  width: 204px;
+  top: 484px;
+  width: 400px;
 }
 .index .x3d-zUixHA {
   background-color: transparent;
@@ -1201,10 +1224,6 @@
   text-align: left;
   top: 367px;
   width: 393px;
-}
-.ji1style {
-  font-family: "AppleSDGothicNeo-ExtraBold", Helvetica, Arial, serif;
-  font-size: 18px;
 }
 .more {
   font-family: "AppleSDGothicNeo-UltraLight", Helvetica, Arial, serif;
