--- a/src/main/resources/templates/css/sw.css
+++ b/src/main/resources/templates/css/sw.css
@@ -45,10 +45,6 @@
   font-size: 12px;
   letter-spacing: -0.12px;
 }
-.ji1style {
-  font-family: "AppleSDGothicNeo-ExtraBold", Helvetica, Arial, serif;
-  font-size: 18px;
-}
 .more {
   font-family: "AppleSDGothicNeo-UltraLight", Helvetica, Arial, serif;
   font-size: 20px;
@@ -155,7 +151,7 @@
 }
 .sw {
   background-color: var(--white);
-  height: 4483px;
+  height: 4523px;
   overflow-x: hidden;
   position: relative;
   width: 1440px;
@@ -205,25 +201,82 @@
   top: 731px;
   width: 1440px;
 }
-.sw .button-dIx87p {
-  background-color: var(--caribbean-green);
-  height: 24px;
-  left: 1067px;
-  position: absolute;
-  top: 15px;
-  width: 123px;
-}
 .sw .button-hvAGCq {
   background-color: var(--caribbean-green);
   height: 60px;
   left: 151px;
   position: absolute;
-  top: 176px;
+  top: 184px;
   width: 218px;
 }
-.sw .cr-6NpaO9 {
+.sw .click-3qshht {
   background-color: transparent;
-  background-image: url(../img/bio-asdfasddfafafgasfasdfasdfasdf00007-88163F3D-8851-47B3-9CE3-B25F4E3B0CF8@2x.png);
+  color: var(--white);
+  font-weight: 200;
+  height: auto;
+  left: 609px;
+  line-height: 24px;
+  position: absolute;
+  text-align: left;
+  top: 120px;
+  white-space: nowrap;
+  width: auto;
+}
+.sw .click-bAyQtV {
+  background-color: transparent;
+  color: var(--white);
+  font-weight: 200;
+  height: auto;
+  left: 213px;
+  line-height: 24px;
+  position: absolute;
+  text-align: left;
+  top: 120px;
+  white-space: nowrap;
+  width: auto;
+}
+.sw .click-hdKSmR {
+  background-color: transparent;
+  color: var(--white);
+  font-weight: 200;
+  height: auto;
+  left: 807px;
+  line-height: 24px;
+  position: absolute;
+  text-align: left;
+  top: 120px;
+  white-space: nowrap;
+  width: auto;
+}
+.sw .click-waRZGu {
+  background-color: transparent;
+  color: var(--white);
+  font-weight: 200;
+  height: auto;
+  left: 1005px;
+  line-height: 24px;
+  position: absolute;
+  text-align: left;
+  top: 120px;
+  white-space: nowrap;
+  width: auto;
+}
+.sw .click-zLZUBK {
+  background-color: transparent;
+  color: var(--white);
+  font-weight: 200;
+  height: auto;
+  left: 411px;
+  line-height: 24px;
+  position: absolute;
+  text-align: left;
+  top: 120px;
+  white-space: nowrap;
+  width: auto;
+}
+.sw .cr-xd0wTK {
+  background-color: transparent;
+  background-image: url(../img/bm-asdfasddfafafgasfasdfasdfasdf00007-FF9BC485-D87B-4D39-B8E2-6D653FA4CFCC@2x.png);
   background-size: 100% 100%;
   height: 97px;
   margin: 0 0 0 50px;
@@ -238,14 +291,22 @@
   top: 0px;
   width: 1440px;
 }
-.sw .g-slave-6NpaO9 {
+.sw .g-slave-xd0wTK {
   background-color: transparent;
-  background-image: url(../img/bio-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900004-B93B4A11-6998-45C7-AB0F-5C29D33B21A8@2x.png);
+  background-image: url(../img/sw-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900004-0F0282D7-032D-4CC7-B765-74579D72A2AE@2x.png);
   background-size: 100% 100%;
   height: 97px;
   margin: 0 0 0 50px;
   position: relative;
   width: 97px;
+}
+.sw .group-11-C61RwL {
+  background-color: transparent;
+  height: 146px;
+  left: 0px;
+  position: absolute;
+  top: 50px;
+  width: 1442px;
 }
 .sw .group-15-SHDHHB {
   background: linear-gradient(180deg, #0018D4 0%, #F7B500 100%);
@@ -260,25 +321,25 @@
 .sw .group-2-C61RwL {
   background-color: transparent;
   height: 1290px;
-  left: 249px;
+  left: 245px;
   position: absolute;
-  top: 2240px;
+  top: 2263px;
   width: 946px;
 }
 .sw .group-3-C61RwL {
   background-color: transparent;
-  height: 236px;
+  height: 244px;
   left: 460px;
   position: absolute;
   top: 309px;
   width: 521px;
 }
-.sw .group-6-C61RwL {
+.sw .group-6-bAyQtV {
   background-color: var(--bunker);
   height: 146px;
   left: 0px;
   position: absolute;
-  top: 53px;
+  top: 0px;
   width: 1442px;
 }
 .sw .group-i7hrr4 {
@@ -314,7 +375,7 @@
   background-color: var(--mine-shaft);
   height: 1px;
   left: 0px;
-  position: absolute;
+  position: relative;
   top: 52px;
   width: 1440px;
 }
@@ -352,7 +413,7 @@
 }
 .sw .img0054-C61RwL {
   background-color: transparent;
-  background-image: url(../img/sw-img0054-32122B38-0800-483A-8012-280A93E4CC67.png);
+  background-image: url(../img/sw-img0054-6E7F341D-2C2D-4E7A-8F4A-4D82C0D831C0.png);
   background-size: 100% 100%;
   height: 595px;
   left: 0px;
@@ -362,7 +423,7 @@
 }
 .sw .img0058-3-5l5ivn {
   background-color: transparent;
-  background-image: url(../img/sw-img0058-3-0DB62B27-5B60-441C-A305-A0EC6252B823.png);
+  background-image: url(../img/sw-img0058-3-043A309C-9641-46FB-AC56-06D8640AC141.png);
   background-size: 100% 100%;
   height: 736px;
   left: 0px;
@@ -370,35 +431,35 @@
   top: 0px;
   width: 1440px;
 }
-.sw .line-2-6NpaO9 {
+.sw .line-2-xd0wTK {
   background-color: transparent;
   height: 72px;
   margin: 0 0 0 50px;
   position: relative;
   width: 1px;
 }
-.sw .line-3-6NpaO9 {
+.sw .line-3-HrtGqK {
   background-color: transparent;
   height: 72px;
   margin: 0 0 0 50px;
   position: relative;
   width: 1px;
 }
-.sw .line-3-D4WyEx {
+.sw .line-3-Hxo22Q {
   background-color: transparent;
   height: 72px;
   margin: 0 0 0 50px;
   position: relative;
   width: 1px;
 }
-.sw .line-3-VX9NFJ {
+.sw .line-3-xLcPb5 {
   background-color: transparent;
   height: 72px;
   margin: 0 0 0 50px;
   position: relative;
   width: 1px;
 }
-.sw .line-3-e8LPZY {
+.sw .line-3-xd0wTK {
   background-color: transparent;
   height: 72px;
   margin: 0 0 0 50px;
@@ -437,19 +498,19 @@
   top: 166px;
   width: 944px;
 }
-.sw .more00000-6NpaO9 {
-  background-color: transparent;
-  height: 32px;
-  margin: 0 0 0 50px;
-  position: relative;
-  width: 84px;
-}
-.sw .more00000-V9ZBCi {
+.sw .more00000-TVJ55C {
   background-color: transparent;
   height: 32px;
   left: 0px;
   position: absolute;
   top: 0px;
+  width: 84px;
+}
+.sw .more00000-xd0wTK {
+  background-color: transparent;
+  height: 32px;
+  margin: 0 0 0 50px;
+  position: relative;
   width: 84px;
 }
 .sw .na-5l5ivn {
@@ -539,12 +600,12 @@
 .sw .stacked-group-C61RwL {
   background-color: transparent;
   height: 868px;
-  left: 2px;
+  left: 0px;
   position: absolute;
-  top: 3615px;
+  top: 3655px;
   width: 1440px;
 }
-.sw .stacked-group-PIEh7b {
+.sw .stacked-group-W8YgeY {
   align-items: center;
   background-color: transparent;
   display: flex;
@@ -556,9 +617,9 @@
   top: 23px;
   width: auto;
 }
-.sw .sw-logo-6NpaO9 {
+.sw .sw-logo-xd0wTK {
   background-color: transparent;
-  background-image: url(../img/bio-swlogo-EE3530C2-879E-487F-8319-E698374DF302@2x.png);
+  background-image: url(../img/sw-swlogo-CDA1FCD5-FC09-4C68-B38C-EFADE8323762@2x.png);
   background-size: 100% 100%;
   height: 97px;
   margin: 0;
@@ -577,19 +638,6 @@
   top: 17px;
   white-space: nowrap;
   width: 184px;
-}
-.sw .textlabel-63crYe {
-  background-color: transparent;
-  color: var(--white);
-  font-weight: 800;
-  height: auto;
-  left: 10px;
-  line-height: 22px;
-  position: absolute;
-  text-align: center;
-  top: 1px;
-  white-space: nowrap;
-  width: 103px;
 }
 .sw .textlabel-C61RwL {
   background-color: transparent;
@@ -741,14 +789,14 @@
   top: 1174px;
   width: auto;
 }
-.sw .x00001-6NpaO9 {
+.sw .x00001-xd0wTK {
   background-color: transparent;
   height: 97px;
   margin: 0 0 0 50px;
   position: relative;
   width: 97px;
 }
-.sw .x00002-6NpaO9 {
+.sw .x00002-xd0wTK {
   background-color: transparent;
   height: 97px;
   margin: 0 0 0 50px;
