Add sw phone number

--- a/src/main/resources/templates/sw.html
+++ b/src/main/resources/templates/sw.html
@@ -273,7 +273,7 @@
         </div>
         <div class="img0054-C61RwL"></div>
         <div class="textlabel-C61RwL newnew">소프트웨어의 융합과 응용을 통한 실전 경험을 쌓을 수 있는 날샘의 SW팀</div>
-        <div class="view-VMr6Om">
+        <div class="view-VMr6Om"> <!--01074108824로 학번 이름 연락해-->
           <div class="img0058-3-5l5ivn"></div>
           <div class="na-5l5ivn with-nalssam">당신이 꿈꾸는 모든것이 현실로.<br />NALSSAM과 함께.</div>
         </div>
